Bug 143890 - Border preview doesn't show the diagonal borders
Summary: Border preview doesn't show the diagonal borders
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-15 20:56 UTC by Bayram Çiçek
Modified: 2024-01-11 23:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
border preview if all lines set (36.53 KB, image/png)
2021-08-15 21:14 UTC, Bayram Çiçek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bayram Çiçek 2021-08-15 20:56:10 UTC
Description:
In "Properties sidebar > Cell Appearance", Calc always shows preview of the selected cell borders.

For example; if LEFT border set in a cell, the preview shows LEFT border (as expected). But this feature, doesn't show the preview of diagonal borders.

Steps to Reproduce:
1. open Calc and select a cell
2. (in Sidebar) go to "Properties > Cell Appearance"
3. select Diagonal Up (and/or Down) border 

Actual Results:
Preview doesn't show diagonal borders

Expected Results:
Diagonal borders should be shown in the preview (as other borders).


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 6c12c659fb22aeab1d1d5d0e8298662e2a602499
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Bayram Çiçek 2021-08-15 21:14:22 UTC
Created attachment 174302 [details]
border preview if all lines set

attachment file: you can see preview area at the bottom of "Background" text.

I want to work on it, assigning to myself.
Comment 2 Commit Notification 2021-08-19 10:02:09 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/966d043b631fd1e850d0eb62d657fbca8f62c033

tdf#143890: Show preview of diagonal borders / Calc

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mehmet gelisin 2021-09-11 13:04:20 UTC Comment hidden (obsolete, SPAM)
Comment 4 Jimmy S. 2021-12-01 12:08:03 UTC Comment hidden (spam)
Comment 5 BogdanB 2021-12-02 11:29:24 UTC
Version: 7.3.0.0.beta1+ (x64) / LibreOffice Community
Build ID: 8c137ff0e201c2d0ecd1bb567496dbed8e5eced7
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 6 EssexPlastering 2024-01-11 23:25:49 UTC Comment hidden (spam)
Comment 7 EssexPlastering 2024-01-11 23:27:30 UTC Comment hidden (spam)