tdf#143890: Show preview of diagonal borders / Calc

- in "Properties sidebar > Cell Appearance",
Calc shows preview of the selected cell borders.
(preview is at the bottom of "Background" text)

- this feature doesn't work for diagonal borders.

- diagonal borders preview is now shown with
this patch.

Change-Id: I9d98b045ccef5e8469cc38f08e5f14c3199d027c